codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__voice_partial_transcript_hidden.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 39
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                            "
"• Agent answer arriving                                     "
"                                                            "
"────────────────────────────────────────────────────────────"
" voice ● listening              ctrl+x mute     /voice stop "
"                                                            "
"❯ Ask Codex to do anything                                  "
"────────────────────────────────────────────────────────────"
"  GPT-5.6-Sol default · /tmp/project                        "
